--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,9 @@
 @import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
-@import './element-ui.scss';
-@import './sidebar.scss';
+// @import './mixin.scss';
+// @import './transition.scss';
+// @import './element-ui.scss';
+// @import './sidebar.scss';
+// @import './sidebar.scss';
 // @import './btn.scss';
 
 html,body {
@@ -19,6 +20,9 @@ a {color: inherit;text-decoration: none}
   width: 1200px;
   margin: 0 auto;
   height: inherit;
+}
+.cursor-text{
+  cursor: text
 }
 // label {
 //   font-weight: 700;
