--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
 
 html,body {
   height: 100%;
-  color: #fff;
+  // color: #fff;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -23,6 +23,12 @@ a {color: inherit;text-decoration: none}
 }
 .cursor-text{
   cursor: text
+}
+.text-nowrap{
+  max-width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 // label {
 //   font-weight: 700;
