--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,10 @@ $--color-success: #13ce66;
 $--color-warning: #FFBA00;
 $--color-danger: #ff4949;
 // $--color-info: #1E1E1E;
+//contract
+$--contract-table-bg: #0c1222;
+$--contract-table-bd: #272837;
+$--contract-table-active: #1C2435;
 
 
 $--button-font-weight: 400;
