--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import './variables.scss';
 // @import './mixin.scss';
-// @import './transition.scss';
+@import './transition.scss';
 // @import './element-ui.scss';
 // @import './sidebar.scss';
 // @import './sidebar.scss';
@@ -29,6 +29,15 @@ a {color: inherit;text-decoration: none}
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.share-text-info{
+  color: $--share-text-info
+}
+.share-text-success{
+  color: $--color-success
+}
+.share-active-bg{
+  color: $--color-success
 }
 // label {
 //   font-weight: 700;
