--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -1,48 +1,55 @@
 // global transition css
 
 /* fade */
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.28s;
-}
+// .fade-enter-active,
+// .fade-leave-active {
+//   transition: opacity 0.28s;
+// }
 
-.fade-enter,
-.fade-leave-active {
-  opacity: 0;
-}
+// .fade-enter,
+// .fade-leave-active {
+//   opacity: 0;
+// }
 
-/* fade-transform */
-.fade-transform-leave-active,
-.fade-transform-enter-active {
-  transition: all .5s;
-}
+// /* fade-transform */
+// .fade-transform-leave-active,
+// .fade-transform-enter-active {
+//   transition: all .5s;
+// }
 
-.fade-transform-enter {
-  opacity: 0;
-  transform: translateX(-30px);
-}
+// .fade-transform-enter {
+//   opacity: 0;
+//   transform: translateX(-30px);
+// }
 
-.fade-transform-leave-to {
-  opacity: 0;
-  transform: translateX(30px);
-}
+// .fade-transform-leave-to {
+//   opacity: 0;
+//   transform: translateX(30px);
+// }
 
-/* breadcrumb transition */
-.breadcrumb-enter-active,
-.breadcrumb-leave-active {
-  transition: all .5s;
-}
+// /* breadcrumb transition */
+// .breadcrumb-enter-active,
+// .breadcrumb-leave-active {
+//   transition: all .5s;
+// }
 
-.breadcrumb-enter,
-.breadcrumb-leave-active {
-  opacity: 0;
-  transform: translateX(20px);
-}
+// .breadcrumb-enter,
+// .breadcrumb-leave-active {
+//   opacity: 0;
+//   transform: translateX(20px);
+// }
 
-.breadcrumb-move {
-  transition: all .5s;
-}
+// .breadcrumb-move {
+//   transition: all .5s;
+// }
 
-.breadcrumb-leave-active {
-  position: absolute;
+// .breadcrumb-leave-active {
+//   position: absolute;
+// }
+.fade-enter-active, .fade-leave-active {
+  transition: all .5s ease-in-out;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  transform: translateX(-300px);
+  z-index:0;
 }
