--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,10 @@ $--contract-table-bg: #0c1222;
 $--contract-table-bd: #272837;
 $--contract-table-active: #1C2435;
 
+//share-option
+$--share-border-color:rgba(105, 111, 128, 0.5);
+$--share-bg-color:rgb(30, 38, 58);
+$--share-text-info:#8F97AE;
 
 $--button-font-weight: 400;
 $--background-active-bg:#b0edef;
