--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -43,7 +43,7 @@ a {color: inherit;text-decoration: none}
 .share-active-bg{
   color: $--color-success
 }
-.custom-form{
+.login-custom-form{
   /deep/ .el-input__inner{
       background: transparent;
       color: #fff;
