--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -49,3 +49,5 @@ $sideBarWidth: 210px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
+$border-color-extralight:#F2F6FC;
+$border-color-lighter:#EBEEF5;
