--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,6 +50,25 @@ a {color: inherit;text-decoration: none}
       border: 1px solid rgba(255, 255, 255, 0.1);
   }
 }
+.el-table__body-wrapper{
+  &::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width : 10px;  /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+    }
+  &::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 10px;
+    // box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background   : #ddd;
+    }
+  &::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    // box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background   : #f0f0f0;
+    }
+}
 // label {
 //   font-weight: 700;
 // }
