--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,6 +40,9 @@ a {color: inherit;text-decoration: none}
 .share-text-success{
   color: $--color-success
 }
+.share-text-danger{
+  color: $--color-danger
+}
 .share-active-bg{
   color: $--color-success
 }
