--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,14 @@
+$--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 $--color-primary: #01ced1;
-$--color-success: #13ce66;
-$--color-warning: #FFBA00;
-$--color-danger: #ff4949;
+/// color|1|Functional Color|1
+$--color-success: #67C23A !default;
+/// color|1|Functional Color|1
+$--color-warning: #E6A23C !default;
+/// color|1|Functional Color|1
+$--color-danger: #F56C6C !default;
+/// color|1|Functional Color|1
+$--color-info: #909399 !default;
 // $--color-info: #1E1E1E;
 //contract
 $--contract-table-bg: #0c1222;
