--- a/src/styles/reset-element-ui.scss
+++ b/src/styles/reset-element-ui.scss
@@ -1,19 +1,26 @@
-.el-table__body-wrapper{
-  &::-webkit-scrollbar {
-    /*滚动条整体样式*/
-    width : 10px;  /*高宽分别对应横竖滚动条的尺寸*/
-    height: 1px;
-    }
-  &::-webkit-scrollbar-thumb {
-    /*滚动条里面小方块*/
-    border-radius: 10px;
-    // box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
-    background   : #ddd;
-    }
-  &::-webkit-scrollbar-track {
-    /*滚动条里面轨道*/
-    // box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    background   : #f0f0f0;
-    }
+
+.el-table{
+  background: none;
+  &::before{
+    height: 0;
+  }
+  .el-table__body-wrapper{
+    &::-webkit-scrollbar {
+      /*滚动条整体样式*/
+      width : 10px;  /*高宽分别对应横竖滚动条的尺寸*/
+      height: 1px;
+      }
+    &::-webkit-scrollbar-thumb {
+      /*滚动条里面小方块*/
+      border-radius: 10px;
+      // box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
+      background   : #ddd;
+      }
+    &::-webkit-scrollbar-track {
+      /*滚动条里面轨道*/
+      // box-shadow   : inset 0 0 5px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
+      background   : #f0f0f0;
+      }
+  }
 }
