--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,11 @@ $--contract-table-bg: #0c1222;
 $--contract-table-bd: #272837;
 $--contract-table-active: #1C2435;
 
+//trading
+$--trading-table-bg: #0c1222;
+$--trading-table-bd: #272837;
+$--trading-table-active: #1C2435;
+
 //share-option
 $--share-border-color:rgba(105, 111, 128, 0.5);
 $--share-bg-color:rgb(30, 38, 58);
