--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,11 +10,15 @@ html,body {min-width: 1440px;}
 textarea,select,input{-webkit-appearance: none; -moz-appearance: none; -o-appearance: none; appearance: none;}
 //全局样式
 .container{ width: 1200px; margin: 0 auto; height: inherit;}
-
+hr{
+  border-top: none;
+  border-color: #999;
+}
 .text-nowrap{ max-width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .text-active{ color: $--color-primary;}
 .text-success{color: $--color-success;}
 .text-danger{color: $--color-danger;}
+.text-warning{color: $--color-warning;}
 
 
 .background-active{ background-color: $--color-primary;}
@@ -31,6 +35,33 @@ tr.contract-order-list-row-class{
   }
   td{
     border-color: rgb(27, 28, 29);
+  }
+}
+
+.contrat-popper-success-class{
+  background: $--contract-table-bg;
+  border: 1px solid $--color-success;
+  &>.el-popover__title{
+    color: $--color-success;
+  }
+  &[x-placement^="left"] .popper__arrow{
+    border-left-color: $--color-success;
+    &::after{
+      border-left-color: $--color-success;
+    }
+  }
+}
+.contrat-popper-danger-class{
+  background: $--contract-table-bg;
+  border: 1px solid $--color-danger;
+  &>.el-popover__title{
+    color: $--color-danger;
+  }
+  &[x-placement^="left"] .popper__arrow{
+    border-left-color: $--color-danger;
+    &::after{
+      border-left-color: $--color-danger;
+    }
   }
 }
 
@@ -53,5 +84,11 @@ tr.contract-order-list-row-class{
       border: 1px solid rgba(255, 255, 255, 0.1);
   }
 }
-
+.custom-select{
+  & /deep/ .el-input__inner{
+    background: transparent;
+    color: #fff;
+    border:none
+  }
+}
 
