--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -6,3 +6,12 @@
   transform: translateX(-300px);
   z-index:0;
 }
+
+@keyframes barberpole{
+	from{
+		background-position:0 0;
+	}
+	to{
+		background-position:60px 30px;
+	}
+}
