--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,6 +29,9 @@ body::-webkit-scrollbar {
 
 .background-active{ background-color: $--color-primary;color: #fff;}
 .border-active{ border:1px solid $--color-primary;}
+.el-slider__button-wrapper{
+  z-index: 2;
+}
 
 .directive-login{
   position: absolute;
@@ -41,7 +44,7 @@ body::-webkit-scrollbar {
   justify-content: center;
   align-items: center;
   background-color: rgba(0,0,0,.8);
-  z-index: 9999;
+  z-index: 3;
 }
 .custom-popper{
   background: #000;
