--- a/src/styles/ixx-variables.scss
+++ b/src/styles/ixx-variables.scss
@@ -2,13 +2,15 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 $--color-primary: #01ced1;
 /// color|1|Functional Color|1
-$--color-success: #67C23A !default;
+$--color-success: #09C989 !default;
 /// color|1|Functional Color|1
 $--color-warning: #E6A23C !default;
 /// color|1|Functional Color|1
-$--color-danger: #F56C6C !default;
+$--color-danger: #F24E4D !default;
 /// color|1|Functional Color|1
 $--color-info: #909399 !default;
+
+$--border-info: #909399 !default;
 // $--color-info: #1E1E1E;
 //contract
 $--contract-table-bg: #0c1222;
