--- a/src/styles/ixx-variables.scss
+++ b/src/styles/ixx-variables.scss
@@ -10,6 +10,8 @@ $--color-danger: #F24E4D !default;
 /// color|1|Functional Color|1
 $--color-info: #909399 !default;
 
+$--color-light: #dfe4ed !default;
+
 $--border-info: #909399 !default;
 // $--color-info: #1E1E1E;
 //contract
