--- a/src/styles/ix-variables.scss
+++ b/src/styles/ix-variables.scss
@@ -10,6 +10,11 @@ $--color-danger: #F56C6C !default;
 /// color|1|Functional Color|1
 $--color-info: #909399 !default;
 // $--color-info: #1E1E1E;
+$--color-info: #909399 !default;
+
+$--color-light: #dfe4ed !default;
+
+$--border-info: #909399 !default;
 //contract
 $--contract-table-bg: #0c1222;
 $--contract-table-bd: #272837;
