--- a/src/styles/reset-element-ui.scss
+++ b/src/styles/reset-element-ui.scss
@@ -93,3 +93,4 @@ tr.contract-order-list-row-class{
   color: #d7d7d7;
   background: none;
 }
+.el-tooltip__popper.custom-tooltip{background: #000;color: #ccc;}
